# metadata-analysis-llm-for-sdc

./: .gitignore  README.md  _ds_bundle.js  app.py  cli.py  main.py  pyproject.toml  requirements-notebook.txt  requirements.txt  run_main.ipynb  styles.css
core/: __init__.py  extract_json.py  json_to_table.py  jsonio.py  llm_client.py  pipeline.py  run_full_pipeline_on_minio.py  run_on_minio.py  table_to_md.py  transform_input.py  transform_output.py  verify_json_output.py
frontend/: _ds_bundle.js
frontend/tokens/: spacing.css
frontend/ui_kits/sdc-pipeline/: App.jsx  README.md  Shell.jsx  StepDepot.jsx  StepExport.jsx  StepQuestions.jsx  StepVerification.jsx  data.js  index.html
notebook/: .results.csv  demo_divMeeting_gemma.ipynb  demo_divMeeting_qwen.ipynb  demo_pipeline_for_minio.ipynb  results.csv
prompts/: prompt_questions.md
quality_comparison_test/: compare_arrays.py  compare_arrays_setdiff.py  ex5_comparaison_indicateurs_LLMvsCorr.ods
src/: LLM_API_call.py  clean.py  clean_input.py  data.py  extract_JSON_array.py  test_transform_input.py  transform_input.py  transform_input_jawad.py  transform_output.py  validate_json_output.py
src/prompts/: prompt_questions.md
src/tests/: test_transform_input.py
tests/: conftest.py  test_extract_json.py  test_json_to_table.py  test_jsonio.py  test_pipeline.py  test_read_input.py
tokens/: colors.css  fonts.css  typography.css
ui_kits/sdc-pipeline/: App.jsx  StepDepot.jsx  StepVerification.jsx  index.html
