[project]
name = "metadata-analysis-llm-for-sdc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "jsonschema>=4.26.0",
    "odfpy>=1.4.1",
    "openai>=2.44.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.4",
    "pyreadr>=0.5.6",
    "python-dotenv>=1.2.2",
    "s3fs>=2026.6.0",
    "tabulate>=0.10.0",
    "werkzeug>=3.1.8",
]
